--- a/matthew_erwin_resume_v1.tex
+++ b/matthew_erwin_resume_v1.tex
@@ -121,8 +121,8 @@
       {General Dynamics Information Technology}{Remote}
       {Software Engineer I (Part-time/Intern)}{Nov. 2022 - Mar. 2023}
       \resumeItemListStart
-        \resumeItem{FAFSA}
-          {Served as a backend developer and gained practical experience with Java by programming pieces of the REST API for the Free Application for Federal Student Aid (FAFSA)}
+        \resumeItem{FSA}
+          {Served as a backend developer and gained practical experience with Java by programming pieces of the REST API for the Federal Student Aid Processing System}
           \resumeItem{Version Control}
           {Proficiently employed version control systems, including GitLab and Git, to facilitate seamless collaboration within the development and testing team}
         \resumeItem{API Testing}
