--- a/matthew_erwin_resume_v1.tex
+++ b/matthew_erwin_resume_v1.tex
@@ -97,7 +97,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Louisiana State University}{Baton Rouge, LA}
-      {Bachelor of Science in Computer Science, Minor in Mathematics GPA: 4.00}{Aug. 2020 -- May 2024}
+      {Bachelor of Science in Computer Science, Minor in Mathematics GPA: 3.98}{Aug. 2020 -- May 2024}
   \resumeSubHeadingListEnd
 
 
@@ -148,14 +148,14 @@
 %-----------PROJECTS-----------------
 \section{Projects}
 \resumeSubHeadingListStart
-    \resumeSubItem{\href{https://github.com/matterwin/CSC4402-Spring23}{Movie Review | \textnormal{\textit{React, Typescript, Rust, CSS, NodeJS, ExpressJS, MySQL}}}}{% Move the \vspace here
+    \resumeSubItem{\href{https://github.com/matterwin/csc4330}{SocialEyes Mobile App | \textnormal{\textit{MongoDB, ExpressJS, React-Native, Typescript, WebSockets}}}}{% Move the \vspace here
         \vspace{-7pt}
-        \begin{itemize} % Add this line to start the bullet points
-            \item Designed and coded a React \& Express full-stack web app for users to read and write movie reviews \vspace{-2pt}
-            \item Implemented MySQL to dynamically store all movie and user information
+        \begin{itemize}
+            \item Designed the Figma and programmed the frontend layout implementation of the hobby-based app\vspace{-2pt}
+            \item Developed and managed reusable code for both frontend and backend components
         \end{itemize}
     }
-    \resumeSubItem{\href{https://github.com/matterwin/DSA-Visual}{DSA Visualization | \textnormal{\textit{React, JavaScript, MongoDB, NodeJS, ExpressJS, MaterialUI, CSS}}}}{% Move the \vspace here
+    \resumeSubItem{\href{https://github.com/matterwin/DSA-Visual}{DSA Visualization Website | \textnormal{\textit{React, JavaScript, MongoDB, NodeJS, ExpressJS, MaterialUI, CSS}}}}{% Move the \vspace here
         \vspace{-7pt}
         \begin{itemize}
             \item Programmed data structures and algorithms visualizations \& informational panels within a full-stack web app \vspace{-2pt}
@@ -163,11 +163,11 @@
             \item Strengthened REST API security by integrating JWTs within session cookies and implemented bcrypt for encryption of confidential user information
         \end{itemize}
     }
-    \resumeSubItem{\href{https://github.com/matterwin/csc3380}{Fit Happens | \textnormal{\textit{React, JavaScript, MSSQL, ASP.Net Core, Apache}}}}{% Move the \vspace here
+        \resumeSubItem{\href{https://github.com/matterwin/CSC4402-Spring23}{Movie Review Website| \textnormal{\textit{React, Typescript, Rust, CSS, NodeJS, ExpressJS, MySQL}}}}{% Move the \vspace here
         \vspace{-7pt}
-        \begin{itemize}
-            \item Collaborated with team members to assemble a full-stack workout web application\vspace{-2pt}
-            \item Deployed using Apache Web Server and AWS EC2 instance
+        \begin{itemize} % Add this line to start the bullet points
+            \item Designed and coded a React \& Express full-stack web app for users to read and write movie reviews \vspace{-2pt}
+            \item Implemented MySQL to dynamically store all movie and user information
         \end{itemize}
     }
 \resumeSubHeadingListEnd
@@ -186,7 +186,7 @@
       \textbf{Frameworks}{: React, NodeJS, ExpressJS, React Native, Material-UI}
     }\vspace{-7pt}
     \item{
-      \textbf{Developer Tools}{: Git, GitLab, Docker, AWS, Azure, Postman, Splunk }
+      \textbf{Developer Tools}{: Git, GitLab, Docker, AWS, Azure, Postman, Splunk, Figma }
     }
   \resumeSubHeadingListEnd
 
