--- a/matthew_erwin_resume_v2.tex
+++ b/matthew_erwin_resume_v2.tex
@@ -87,8 +87,9 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\href{https://matthewderwin.com/}{\Large Matthew Erwin}} & {Email : matthewderwin23@gmail.com}\\
-  \href{https://matthewderwin.com/}{https://matthewderwin.com} & GitHub : \href{https://github.com/matterwin}{https://github.com/matterwin} \\
+  \textbf{\Large Matthew Erwin}
+   & \href{https://matthewderwin.com/}{matthewderwin.com}\phantom{}\\
+   {matthewderwin23@gmail.com}\phantom{} & \href{https://github.com/matterwin}{github.com/matterwin}\phantom{}\\
 \end{tabular*}
 
 
