--- a/matthew_erwin_resume_2024.tex
+++ b/matthew_erwin_resume_2024.tex
@@ -171,7 +171,7 @@
             \item Project entailed practice of software development lifecycle from Figma design to MVP and monetization\vspace{-2pt}
         \end{itemize}
     }
-            \resumeSubItem{\href{https://github.com/matterwin/crawfish_shrimp_app}{Crawfish Price App $\vert$ \textnormal{\textit{React-Native, Spring, PostgreSQL, Firebase, Google Place API}}}}{% Move the \vspace here
+            \resumeSubItem{\href{https://github.com/matterwin/crawfish_shrimp_app}{Crawfish Price App $\vert$ \textnormal{\textit{React-Native, Spring, PostgreSQL, Firebase, Google Places API}}}}{% Move the \vspace here
         \vspace{-7pt}
         \begin{itemize}
             \item Work-in-progress mobile app for tracking crawfish and shrimp prices via crowd-sourcing and scraping \vspace{-2pt}
