--- a/matthew_erwin_resume_2024.tex
+++ b/matthew_erwin_resume_2024.tex
@@ -182,7 +182,7 @@
         \vspace{-7pt}
         \begin{itemize} % Add this line to start the bullet points
             \item Full stack web application for users to read and write movie reviews \vspace{-2pt}
-            \item Enabled users to search for movies and give ratings to what they've seen
+            \item Enables users to search for movies and give ratings to what they've seen
         \end{itemize}
     }
     }
