resume spring boot

--- a/matthew_erwin_resume_2024.tex
+++ b/matthew_erwin_resume_2024.tex
@@ -163,7 +163,7 @@
 %-----------PROJECTS-----------------
 \section{Projects}
 \resumeSubHeadingListStart
-    \resumeSubItem{\href{https://github.com/matterwin/csc4330}{SocialEyes Mobile App $\vert$ \textnormal{\textit{MongoDB, Express, React-Native, Redux, Typescript, Figma}}}}{% Move the \vspace here
+    \resumeSubItem{\href{https://github.com/matterwin/csc4330}{SocialEyes Mobile App $\vert$ \textnormal{\textit{MongoDB, Express, React Native, Redux, Typescript, Figma}}}}{% Move the \vspace here
         \vspace{-7pt}
         \begin{itemize}
                   \item Developed a minimum viable product (MVP) for a social media app to showcase to investors
@@ -171,7 +171,7 @@
             \item Project entailed practice of software development lifecycle from Figma design to MVP and monetization\vspace{-2pt}
         \end{itemize}
     }
-            \resumeSubItem{\href{https://github.com/matterwin/crawfish_shrimp_app}{Crawfish Price App $\vert$ \textnormal{\textit{React-Native, Spring, PostgreSQL, Firebase, Google Places API}}}}{% Move the \vspace here
+            \resumeSubItem{\href{https://github.com/matterwin/crawfish_shrimp_app}{Crawfish Price App $\vert$ \textnormal{\textit{React Native, Spring Boot, PostgreSQL, Firebase, Google Places API}}}}{% Move the \vspace here
         \vspace{-7pt}
         \begin{itemize}
             \item Work-in-progress mobile app for tracking crawfish and shrimp prices via crowd-sourcing and scraping \vspace{-2pt}
